# flood-vision

./: .gitignore  CHANGELOG.md  README.md  checkpoint_deeplab_4class.pth  checkpoint_unet.pth  main.py  pyproject.toml  release.config.js
.github/workflows/: release.yml
datasets/: floodnet_dataset.py  floodnet_dataset_4class.py
eval/: evaluate_segmentation.py  evaluate_segmentation_4class.py
inference/: video_inference.py  video_inference_geomap.py
models/: deeplab_model.py  unet_baseline.py
scripts/: validate_floodnet.py
train/: train_segmentation.py  train_segmentation_4class.py
utils/: losses.py  visualize_predictions.py  visualize_predictions_4class.py
