[project]
name = "flood-vision"
version = "1.1.0"
description = "Flood Vision - A deep-learning-based computer-vision system for flood mapping and damage assessment using aerial imagery."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "folium>=0.20.0",
    "hf-xet>=1.1.10",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "scikit-image>=0.25.2",
    "segmentation-models-pytorch>=0.5.0",
    "shapely>=2.1.2",
]
